fix about us card text overflow

--- a/frontend/src/pages/About.css
+++ b/frontend/src/pages/About.css
@@ -93,7 +93,7 @@
 }
 
 .about-card-text {
-  margin-top: 40px;
+  margin-top: 10px;
   color: #000;
   font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   font-weight: 400;
